接通患者LRC歌词并实现安卓播放同步显示
